<resources>
    <string name="app_name">GrupoZapChallenge</string>
    <string name="title_main_activity">Teste de engenharia do GrupoZap</string>
    <string name="subtitle_main_activity">Clique abaixo para filtrar os imóveis por portal</string>
    <string name="logo_grupo_zap">Logo GrupoZap</string>
    <string name="logo_zap_imoveis">Logo Zap Imóveis</string>
    <string name="logo_viva_real">Logo Viva Real</string>

    <string name="formatacao_reais">R$ %1$.2f</string>

    <!--building item-->
    <string name="vagas">vagas</string>
    <string name="banheiros">banheiros</string>
    <string name="quartos">quartos</string>
    <string name="metros">m²</string>
    <string name="valor">Valor:</string>
    <string name="imovel_tipo_aluguel">Imóvel para Aluguel</string>
    <string name="imovel_tipo_venda">Imóvel para Venda</string>
    <string name="ver_mais">Ver Mais</string>


</resources>
