<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/cl_layout_building_activity"
        android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_foto_building_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            tools:listitem="@layout/image_item"
            tools:itemCount="9"
            android:scrollbars="horizontal"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/tv_buildingType_building_activity"
            android:text="@string/imovel_tipo_aluguel"
            android:textSize="@dimen/max_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_24"
            android:textColor="@color/black_000000"
            app:layout_constraintTop_toBottomOf="@+id/rv_foto_building_activity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <TextView
            android:id="@+id/tv_num_quartos_building_activity"
            tools:text="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            app:layout_constraintTop_toBottomOf="@+id/tv_buildingType_building_activity"
            app:layout_constraintStart_toStartOf="@+id/tv_buildingType_building_activity"/>

    <TextView
            android:id="@+id/tv_quartos_building_activity"
            android:text="@string/quartos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintTop_toTopOf="@+id/tv_num_quartos_building_activity"
            app:layout_constraintStart_toEndOf="@+id/tv_num_quartos_building_activity"/>

    <TextView
            android:id="@+id/tv_num_banheiros_building_activity"
            tools:text="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            app:layout_constraintTop_toTopOf="@+id/tv_num_quartos_building_activity"
            app:layout_constraintStart_toEndOf="@+id/tv_quartos_building_activity"/>

    <TextView
            android:id="@+id/tv_banheiros_building_fragment"
            android:text="@string/banheiros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintTop_toTopOf="@+id/tv_num_quartos_building_activity"
            app:layout_constraintStart_toEndOf="@+id/tv_num_banheiros_building_activity"/>

    <TextView
            android:id="@+id/tv_num_metros_building_activity"
            tools:text="70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_num_quartos_building_activity"
            app:layout_constraintStart_toStartOf="@+id/tv_num_quartos_building_activity"/>

    <TextView
            android:id="@+id/tv_metros_building_activity"
            android:text="@string/metros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintTop_toBottomOf="@+id/tv_num_quartos_building_activity"
            app:layout_constraintStart_toEndOf="@+id/tv_num_metros_building_activity"/>

    <TextView
            android:id="@+id/tv_num_vagas_building_activity"
            tools:text="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_num_quartos_building_activity"
            app:layout_constraintStart_toStartOf="@+id/tv_num_banheiros_building_activity"/>

    <TextView
            android:id="@+id/tv_vagas_building_activity"
            android:text="@string/vagas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            app:layout_constraintTop_toBottomOf="@+id/tv_num_quartos_building_activity"
            app:layout_constraintStart_toEndOf="@+id/tv_num_vagas_building_activity"/>

    <TextView
            android:id="@+id/tv_valor_building_activity"
            android:text="@string/valor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textColor="@color/black_000000"
            android:textSize="@dimen/med_font_size"
            app:layout_constraintTop_toBottomOf="@+id/tv_vagas_building_activity"
            app:layout_constraintStart_toStartOf="@+id/tv_buildingType_building_activity"/>

    <TextView
            android:id="@+id/tv_num_valor_building_activity"
            tools:text="R$ 1000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:textSize="@dimen/med_font_size"
            android:textColor="@color/black_000000"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/margin_24"
            app:layout_constraintEnd_toEndOf="@+id/tv_buildingType_building_activity"
            app:layout_constraintTop_toTopOf="@+id/tv_valor_building_activity"
            app:layout_constraintStart_toEndOf="@+id/tv_valor_building_activity"
            app:layout_constraintVertical_bias="0.0"/>

</android.support.constraint.ConstraintLayout>
