<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/iv_foto_building_fragment"
                android:layout_width="160dp"
                android:layout_height="160dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/tv_buildingType_building_fragment"
                android:text="@string/imovel_tipo_aluguel"
                android:textSize="@dimen/max_font_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_24"
                app:layout_constraintTop_toTopOf="@+id/iv_foto_building_fragment"
                app:layout_constraintStart_toEndOf="@+id/iv_foto_building_fragment"/>

        <TextView
                android:id="@+id/tv_num_quartos_building_fragment"
                tools:text="4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_8"
                app:layout_constraintTop_toBottomOf="@+id/tv_buildingType_building_fragment"
                app:layout_constraintStart_toEndOf="@+id/iv_foto_building_fragment"/>

        <TextView
                android:id="@+id/tv_quartos_building_fragment"
                android:text="@string/quartos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                app:layout_constraintTop_toTopOf="@+id/tv_num_quartos_building_fragment"
                app:layout_constraintStart_toEndOf="@+id/tv_num_quartos_building_fragment"/>

        <TextView
                android:id="@+id/tv_num_banheiros_building_fragment"
                tools:text="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                app:layout_constraintTop_toTopOf="@+id/tv_num_quartos_building_fragment"
                app:layout_constraintStart_toEndOf="@+id/tv_quartos_building_fragment"/>

        <TextView
                android:id="@+id/tv_banheiros_building_fragment"
                android:text="@string/banheiros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                app:layout_constraintTop_toTopOf="@+id/tv_num_quartos_building_fragment"
                app:layout_constraintStart_toEndOf="@+id/tv_num_banheiros_building_fragment"/>

        <TextView
                android:id="@+id/tv_num_metros_building_fragment"
                tools:text="70"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_num_quartos_building_fragment"
                app:layout_constraintStart_toStartOf="@+id/tv_num_quartos_building_fragment"/>

        <TextView
                android:id="@+id/tv_metros_building_fragment"
                android:text="@string/metros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                app:layout_constraintTop_toBottomOf="@+id/tv_num_quartos_building_fragment"
                app:layout_constraintStart_toEndOf="@+id/tv_num_metros_building_fragment"/>

        <TextView
                android:id="@+id/tv_num_vagas_building_fragment"
                tools:text="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_num_quartos_building_fragment"
                app:layout_constraintStart_toStartOf="@+id/tv_num_banheiros_building_fragment"/>

        <TextView
                android:id="@+id/tv_vagas_building_fragment"
                android:text="@string/vagas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                app:layout_constraintTop_toBottomOf="@+id/tv_num_quartos_building_fragment"
                app:layout_constraintStart_toEndOf="@+id/tv_num_vagas_building_fragment"/>

        <TextView
                android:id="@+id/tv_valor_building_fragment"
                android:text="@string/valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_24"
                android:layout_marginTop="@dimen/margin_8"
                android:textSize="@dimen/med_font_size"
                app:layout_constraintTop_toBottomOf="@+id/tv_vagas_building_fragment"
                app:layout_constraintStart_toEndOf="@+id/iv_foto_building_fragment"/>

        <TextView
                android:id="@+id/tv_num_valor_building_fragment"
                tools:text="R$ 1000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:textSize="@dimen/med_font_size"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="@dimen/margin_24"
                app:layout_constraintTop_toTopOf="@+id/tv_valor_building_fragment"
                app:layout_constraintStart_toEndOf="@+id/tv_valor_building_fragment"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>