<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:background="@color/orange_ff8c00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/iv_logo_zap_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/white_FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/logo_zap"
                android:contentDescription="@string/logo_grupo_zap"/>

        <TextView
                android:id="@+id/tv_subtitulo_zap_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title_main_activity"
                android:textColor="@color/white_FFFFFF"
                android:textSize="@dimen/max_font_size"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo_zap_activity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_zap_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                app:layout_constrainedHeight="true"
                app:layout_constraintVertical_bias="0"
                tools:itemCount="9"
                android:nestedScrollingEnabled="false"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/building_item"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_subtitulo_zap_activity"/>

        <Button
                android:id="@+id/bt_ver_mais_zap_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_24"
                android:textAllCaps="false"
                android:text="@string/ver_mais"
                android:background="@color/white_FFFFFF"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                app:layout_constraintTop_toBottomOf="@+id/rv_zap_activity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>